streamlined export of single file analysis

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,10 +1,12 @@
-# pytest.ini
-[tool:pytest]
+# streamlining/pytest.ini
+[pytest]
 testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = 
+pythonpath = src
+
+addopts =
     -v
     --tb=short
     --strict-markers
